<resources>
    <!-- Category name for the vocabulary words for collection [CHAR LIMIT=20] -->
    <string name="category_collection">Collection</string>

    <!-- Category name for aesthetics [CHAR LIMIT=20] -->
    <string name="category_aesthetics">Aesthetics</string>

    <!-- Category name for the vocabulary words for bacteria [CHAR LIMIT=20] -->
    <string name="category_bacteria">Bacteria</string>

    <!-- Category name for the vocabulary words for Test Strips [CHAR LIMIT=20] -->
    <string name="category_testStrips">Test Strips</string>

    <string name="app_name">Report Water Testing Results</string>
    <string name="enter_value">enter value</string>
    <string name="iron">Iron</string>
    <string name="copper">Copper</string>
    <string name="select_one">select one</string>
    <string name="nitrate">Nitrate</string>
    <string name="nitrite">Nitrite</string>
    <string name="ph">pH = </string>
    <string name="alkalinity">Alkalinity</string>
    <string name="total_chlorine">Total Chlorine</string>
    <string name="total_hardness">Total Hardness</string>
    <string name="type_description">type description</string>
    <string name="water_taste">Only if you feel comfortable drinking the water, describe the taste of the water:</string>
    <string name="water_smell">Describe the smell of the water:</string>
    <string name="water_appearance">Describe the color/appearance of the water:</string>
    <string name="temperature">Temperature of water achieved before collection:</string>
    <string name="default_time">0 seconds</string>
    <string name="time_running">How long did you run the water before collecting your sample (1 min = 60 seconds)?</string>
    <string name="normal_use">What do you normally use water from the bathroom sink for? Check all that apply or None. </string>
    <string name="page_title">Report Water Testing Results</string>
    <string name="bacteria">Bacteria</string>
    <string name="pesticide">Pesticide</string>
    <string name="lead">Lead</string>
    <string name="rottenEgg_smell">Does the water have a rotten egg odor?</string>
    <string name="sediment">Is there sediment in the bottom of the container?</string>
    <string name="feathery">Does the sediment have a feathery appearance?</string>
    <string name="submit">Submit Results</string>
    <string name="drinking">Drinking</string>
    <string name="brushing_teeth">Brushing Teeth</string>
    <string name="handwashing">Handwashing</string>
    <string name="none">None</string>
    <string name="scalding">Scalding</string>
    <string name="hot">Hot</string>
    <string name="warm">Warm</string>
    <string name="tepid">Tepid</string>
    <string name="cool">Cool</string>
    <string name="cold">Cold</string>
    <string name="water_color_description">The water is \u0020 \u0020 ... \u0020 \u0020 in color</string>
    <string name="water_smell_description">The water smells like...</string>
    <string name="water_taste_description">The water tastes...</string>
    <string name="enter_ppm">\u0020 \u0020 \u0020 \u0020 \u0020 \u0020  ppm</string>
    <string name="enter_pH"> \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 </string>
    <string name="safe">Safe</string>
    <string name="unsafe">Unsafe</string>
    <string name="negative">Negative</string>
    <string name="positive">Positive</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="defaultTabletNumber">\u0020 \u0020 000 \u0020 \u0020 </string>
    <string name="date_of_collection">Date of Collection</string>
    <string name="mm_dd_yyyy">MM/DD/YYYY</string>
    <string name="time_of_collection">Time of Collection</string>
    <string name="hh_mm_am_pm">hh:mm am/pm</string>
    <string name="tablet_number">Tablet Number</string>
    <string name="testStripSectionTitle">Enter the values indicated from each of your test strips:</string>
    <string name="summary">Summary: </string>
    <string name="running_time_short">Running Time</string>
    <string name="water_temp_short">Temperature</string>
    <string name="appearance_short">Color</string>
    <string name="smell_short">Smell</string>
    <string name="taste_short">Taste</string>
    <string name="rotten_egg_short">Rotten Egg Smell</string>
    <string name="sediment_short">Sediment</string>
    <string name="feathery_short">Feathery</string>
    <string name="concentration_ppm">ppm</string>
    <string name="email_subject">CDF Water Testing Results Summary</string>
    <string name="email_address">communitydrivenflint@gmail.com</string>
    <string name="thank_you">Lastly, click the send arrow in the top right!</string>
    <string name="category_landing">Instructions</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>