<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AestheticsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:padding="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/water_appearance"
        android:textColor="@color/black"/>

    <EditText
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:id="@+id/water_appearance_description"
        android:textSize="20sp"
        android:layout_marginStart="24dp"
        android:hint="@string/water_color_description"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:padding="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/water_smell"
        android:textColor="@color/black"/>

    <EditText
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:id="@+id/water_smell_description"
        android:textSize="20sp"
        android:layout_marginStart="24dp"
        android:hint="@string/water_smell_description"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:padding="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/water_taste"
        android:textColor="@color/black"/>

    <EditText
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:id="@+id/water_taste_description"
        android:textSize="20sp"
        android:layout_marginStart="24dp"
        android:hint="@string/water_taste_description"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginTop="48dp"
            android:id="@+id/summary"
            android:text="@string/summary"
            android:textColor="@color/black"
            android:visibility="gone"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="48dp"
            android:padding="16dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/submit"
            android:onClick="submitAestheticsResults"/>

    </LinearLayout>

</ScrollView>