<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tan_background"
    android:orientation="vertical"
    tools:context="CDFFlint.pilot.cdf_multiscreen.MainActivity">

    <TextView
        android:id="@+id/collection"
        style="@style/CategoryStyle"
        android:background="@color/category_collection"
        android:text="@string/category_collection"/>

    <TextView
        android:id="@+id/aesthetics"
        style="@style/CategoryStyle"
        android:background="@color/category_aesthetics"
        android:text="@string/category_aesthetics"/>

    <TextView
        android:id="@+id/bacteria"
        style="@style/CategoryStyle"
        android:background="@color/category_bacteria"
        android:text="@string/category_bacteria"/>

    <TextView
        android:id="@+id/testStrips"
        style="@style/CategoryStyle"
        android:background="@color/category_testStrips"
        android:text="@string/category_testStrips"/>

</LinearLayout>