<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BacteriaActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:padding="8dp"
        android:textColor="@color/black"
        android:layout_marginTop="24dp"
        android:text="@string/rottenEgg_smell" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="24dp">
        <RadioButton
            android:id="@+id/rottenEgg_no_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:textSize="20sp"
            android:textColor="#575757"
            android:layout_marginStart="8dp"/>
        <RadioButton
            android:id="@+id/rottenEgg_yes_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:textSize="20sp"
            android:textColor="#575757"
            android:layout_marginStart="8dp"/>
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:padding="8dp"
        android:textColor="@color/black"
        android:text="@string/sediment"
        android:layout_marginTop="24dp"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="24dp">
        <RadioButton
            android:id="@+id/sediment_no_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:textSize="20sp"
            android:textColor="#575757"
            android:layout_marginStart="8dp"/>
        <RadioButton
            android:id="@+id/sediment_yes_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:textSize="20sp"
            android:textColor="#575757"
            android:layout_marginStart="8dp"/>
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:padding="8dp"
        android:textColor="@color/black"
        android:text="@string/feathery"
        android:layout_marginTop="24dp"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="24dp">
        <RadioButton
            android:id="@+id/feathery_no_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:textSize="20sp"
            android:textColor="#575757"
            android:layout_marginStart="8dp"/>
        <RadioButton
            android:id="@+id/feathery_yes_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:textSize="20sp"
            android:textColor="#575757"
            android:layout_marginStart="8dp"/>
    </RadioGroup>

</LinearLayout>